# zizmor-scan-action

./: .editorconfig  .pre-commit-config.yaml  README.md  REUSE.toml  SECURITY.md  action.yaml  pyproject.toml
.github/: dependabot.yml
.github/dependabot/: zizmor-requirements.txt
.github/scripts/: zizmor_summary.py
.github/workflows/: autolabeler.yaml  clear-action-cache.yaml  openssf-scorecard.yaml  release-drafter.yaml  semantic-pull-request.yaml  sha-pinned-actions.yaml  tag-push.yaml  testing.yaml  zizmor.yaml
examples/: caller-workflow.yaml  required-workflow.yaml
