# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Linux Foundation

# This project exists solely to pin the zizmor version that the reusable
# workflow installs, and to let Dependabot's `uv` ecosystem keep that pin
# current. Nothing is built, installed, or published from it; the reusable
# workflow reads the pinned version from this file at run time and then
# downloads the matching attested zizmor release binary.

[project]
name = "zizmor-scan-action-pin"
version = "0.0.0"
description = "Version pin for the zizmor auditor run by this reusable workflow."
requires-python = ">=3.11"
dependencies = [
    "zizmor==1.25.2",
]

[tool.uv]
package = false
