# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 The Linux Foundation

# This project exists solely to pin the zizmor version that the composite
# action installs, and to let Dependabot's `uv` ecosystem keep that pin
# current. Nothing is built, installed, or published from it; the action
# reads the pinned version from this file at run time and then downloads
# the matching attested zizmor release binary.

[project]
name = "zizmor-scan-action-pin"
version = "0.0.0"
description = "Version pin for the zizmor auditor run by this composite action."
requires-python = ">=3.11"
dependencies = [
    "zizmor==1.26.1",
]

[tool.uv]
# Supply-chain cooldown: do not resolve anything published in the last
# 7 days (rolling window; uv records it as a relative span in uv.lock).
# Requires uv >= 0.9.17 for the relative-duration ("7 days") form.
exclude-newer = "7 days"
package = false
